--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -54,7 +54,7 @@ QToolButton {
     min-width: 90px;
 	text-align: bottom;
 	font-size: 16px;
-	padding: 0px 0px 10px 0px;
+	padding-top: 50px;
 
 }
 QToolButton:pressed {
