--- a/settingsdialog.ui
+++ b/settingsdialog.ui
@@ -39,16 +39,22 @@
 
 QFrame {
 	background-color: rgb(45, 45, 45);
+	color: rgb(45, 45, 45);
 }
 
 QTabWidget {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                       stop: 0 #464646, stop: 1 #2f2f2f);
-	border: 1px sollid #464646;
-	color: white;
+	border: 100px solid #464646;
     min-width: 90px;
 	text-align: bottom;
 	font-size: 16px;
+}
+
+QTabWidget::pane { 
+        border-top: 2px solid #2f2f2f;
+		top: 1px;
+
 }
 
 
@@ -58,7 +64,8 @@ QTabBar::tab:selected {
 
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                       stop: 0 #464646, stop: 1 #2f2f2f);
-	border: 1px sollid #464646;
+	
+	
 	color: white;
     min-width: 90px;
 	min-height: 50px;
@@ -81,6 +88,24 @@ QTabBar::tab:!selected {
 
 
 
+QToolButton {
+	border: 1px solid #1f1f1f;
+    border-radius: 2px;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                      stop: 0 #464646, stop: 1 #2f2f2f);
+	color: white;
+    min-width: 90px;
+	text-align: bottom;
+	font-size: 16px;
+	padding-top: 50px;
+
+}
+QToolButton:pressed {
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                      stop: 0 #2f2f2f, stop: 1 #464646);
+}
+
+
 QPushButton {
 	
     border: 1px solid #1f1f1f;
@@ -91,16 +116,18 @@ QPushButton {
     min-width: 90px;
 	text-align: bottom;
 	font-size: 16px;
-}
-
-QLabel { 
-	color: white; 
+	padding: 0px 0px 10px 0px;
 }
 
 QPushButton:pressed {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                       stop: 0 #2f2f2f, stop: 1 #464646);
 }
+
+QLabel { 
+	color: white; 
+}
+
 
 QPushButton:flat {
     border: none; /* no border for a flat push button */
@@ -112,6 +139,8 @@ QPushButton:default {
 
 QLineEdit {
 	background-color: rgb(34, 34, 34);
+	color: white;
+	border: 1px solid #1f1f1f;
 
 
 }
@@ -195,7 +224,7 @@ QLineEdit {
            </property>
            <property name="minimumSize">
             <size>
-             <width>90</width>
+             <width>290</width>
              <height>0</height>
             </size>
            </property>
@@ -289,7 +318,7 @@ REFERENCE</string>
                    </size>
                   </property>
                   <property name="text">
-                   <string>PushButton</string>
+                   <string>SITES</string>
                   </property>
                  </widget>
                 </item>
