dummy graph added

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -703,7 +703,7 @@ SETTINGS</string>
      </widget>
     </item>
     <item>
-     <widget class="QFrame" name="frame_2">
+     <widget class="QFrame" name="graphFrame">
       <property name="tabletTracking">
        <bool>false</bool>
       </property>
